# rust-capnproto-example

./: Cargo.toml  README.md
schemas/: cats.capnp
src/: build.rs  cats_capnp.rs  main.rs
