[package]
name = "rust-capnproto-example"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capnp = "0.17.2"
tokio = { version = "1.29.1", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
capnpc = "0.17.2"

